Bug 158753 - Chart wizard jumps back to chart type selection after dialog is collapsed for range selection
Summary: Chart wizard jumps back to chart type selection after dialog is collapsed for...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.2.6 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3 Chart-Wizard
  Show dependency treegraph
 
Reported: 2023-12-17 17:05 UTC by rrosner5
Modified: 2024-07-23 02:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Chart wizard screenshot. (55.30 KB, image/png)
2023-12-20 01:14 UTC, m_a_riosv
Details
Video of the bug happening (1016.78 KB, video/webm)
2023-12-20 16:49 UTC, rrosner5
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rrosner5 2023-12-17 17:05:37 UTC
Description:
When creating a chart and e.g. select some cells for any of the entries - so the wizard closes until you have selected the cells and gets opened back up - it will always go back to the chart type selection screen instead of the screen for editing the data sets. Seems to only happen with the Linux version.

Steps to Reproduce:
1. Open chart wizard
2. Go to dataset editor
3. Go to select some cells from the spreadsheet for anything

Actual Results:
Wizard jumps back to chart type selector

Expected Results:
Wizard should open back up at the point it was left of.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: 60(Build:1)
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: de-DE (en_US.UTF-8); UI: de-DE
Debian package version: 4:7.6.4~rc1-1
Calc: threaded
Comment 1 m_a_riosv 2023-12-20 01:14:29 UTC
Created attachment 191522 [details]
Chart wizard screenshot.

Sorry, where is dataset editor?
Comment 2 rrosner5 2023-12-20 05:46:14 UTC
Your screenshot doesn't show up, but it's the third screen of the wizard.
Comment 3 m_a_riosv 2023-12-20 16:30:28 UTC
I can't reproduce.
Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 4 rrosner5 2023-12-20 16:49:59 UTC
Created attachment 191532 [details]
Video of the bug happening

This is how it looks to me. And it's happening on two independent systems. And as explained on both the version Debian ships in their Testing repo and the Flathub version.
Comment 5 rrosner5 2023-12-20 16:50:54 UTC
Also, this isn't only happening to me in the latest version. In fact I can't recall when I encountered this first.
Comment 6 m_a_riosv 2023-12-21 00:16:22 UTC
I can't reproduce, let see if someone with Linus can test.
Comment 7 rrosner5 2023-12-21 06:36:01 UTC
If course you can't reproduce it on Windows, that's why it's explicitly marked as a Linux problem. I never had that problem on Windows either, of course I can't tell if macOS users might be affected too.
Comment 8 Stéphane Guillou (stragu) 2024-01-03 01:47:37 UTC
Reproduced in recent trunk build:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e71934471442a8bbba7e661d3ebe5f708627c5d6
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And:

Version: 6.4.0.3
Build ID: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

Not reproduced with gen or kf5 VCL plugins.
Not reproduced in LO 6.3 -> regression
Comment 9 Stéphane Guillou (stragu) 2024-01-05 12:12:56 UTC
Bibisected with linux-64-6.4 repo to first bad build [f8b16ef7a27e096cabb4144f3fb260305d155469] which points to:

commit d661cb17610af93b1607025284f23187c6d2fc06
author	Caolán McNamara    Thu Aug 22 11:15:57 2019 +0100
committer	Caolán McNamara 	Thu Aug 22 18:26:41 2019 +0200
weld chart CreationWizard
Reviewed-on: https://gerrit.libreoffice.org/77954

Caolán, can you please have a look?
Comment 10 Caolán McNamara 2024-07-16 20:52:59 UTC
in gtk itself

gtk_assistant_unmap ...
{
    ...
    priv->current_page  = NULL;
    ...
}

gtk_assistant_map
{
    page_num = 0;
    ...
    set_current_page (assistant, page_num)
    ...
}

so when it disappears the current page is lost and when it reappears if there is no current page, then page 0 is picked. I wonder if it always worked like that or something changed in gtk since the initial work on this wizard.

But it looks like we should be able to simply save and restore the page on hiding and showing the wizard to workaround this
Comment 11 Caolán McNamara 2024-07-17 08:29:19 UTC
https://gerrit.libreoffice.org/c/core/+/170611 for that then
Comment 12 Commit Notification 2024-07-17 13:03:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/de4be295993f6bdd255475604056ad3f48478fb1

Resolves: tdf#158753 GtkAssistant loses current page on hide+show

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Caolán McNamara 2024-07-17 13:04:28 UTC
done in trunk, backports to 24-8 and 24-2 in gerrit
Comment 14 Commit Notification 2024-07-18 05:40:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/a71ffee86f924bd181aa468807e63db70acf9117

Resolves: tdf#158753 GtkAssistant loses current page on hide+show

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2024-07-18 05:40:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/d22d90d4c5585fdbc63bded496543e787fa38a48

Resolves: tdf#158753 GtkAssistant loses current page on hide+show

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Stéphane Guillou (stragu) 2024-07-23 02:56:35 UTC
Thanks Caolán! Fix verified in:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8705cfecd5a10f817d3a2a02041d85e77282aa30
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded