Resolves: tdf#158753 GtkAssistant loses current page on hide+show

gtk_assistant_unmap ...
{
    ...
    priv->current_page  = NULL;
    ...
}

gtk_assistant_map
{
    page_num = 0;
    ...
    set_current_page (assistant, page_num)
    ...
}

It doesn't automatically restore itself to the page it was on
when it was hidden, so do that explicitly.

Change-Id: If23b255193c4a65b286e036c8796d9d8a2ffcb5e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170611
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit de4be295993f6bdd255475604056ad3f48478fb1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170645
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>